# ElbeeCrypt

./: .gitignore  README.md  build-gcc.bat  build-msvc.bat  conan-build.bat  conan-build.batsh  conanfile.py  elbeecrypt.code-workspace  meson.build  process-resources.bat  resources.txt  run.txt  sample-files.csv  secure tls ciphers.txt  secure tls13 ciphers.txt
.mesondep/: conan_init.py  glob.py  msvc-locator.py  msvc_locator.py  process_resources.py  xxd.py
.mesondep/dependencies/: compiler_util.py  enum_util.py  mutable_enum.py  os_util.py  sources.txt  which.py
.mesondep/files/: asset.hpp
.mesondep/files/conan-profiles/: windows-gcc_x86  windows-gcc_x86-64  windows-msvc_x86  windows-msvc_x86-64
disguise/: rh-manifest.txt
include/: 3p.txt  README.txt
include/cryptor/: main.hpp
include/decryptor/: main.hpp
include/einstein-enum/: einstein-enum.hpp
include/elbeecrypt/common/: settings.hpp
include/elbeecrypt/common/io/: chunked-file-reader.hpp  cryptor-engine.hpp  direntwalk.hpp  hunter.hpp
include/elbeecrypt/common/targets/: category.hpp  extensions.hpp
include/elbeecrypt/common/targets/extgroup/: archive.hpp  audio.hpp  document.hpp  executable.hpp  image.hpp  misc.hpp  plain.hpp  video.hpp
include/elbeecrypt/common/utils/: container.hpp  fs.hpp  stream.hpp  string.hpp  threadsafe_cerr.hpp  threadsafe_cout.hpp
include/elbeecrypt/cryptor/: hunter-encryptor.hpp  main.hpp
include/elbeecrypt/decryptor/: hunter-decryptor.hpp  main.hpp
include/registry/: registry.hxx
resources/cryptor/: recover-your-files.hxx.res  recover-your-files.txt  test.hxx.res
sample-files/: John Cena (The Time Is Now)(MyMp3Song.Com).mid
src/: README.txt
src/cryptor/: main.cpp
src/decryptor/: main.cpp
src/elbeecrypt/common/: temp.cpp
src/elbeecrypt/common/io/: chunked-file-reader.cpp  cryptor-engine.cpp  direntwalk.cpp  hunter.cpp
src/elbeecrypt/common/targets/: extensions.cpp
src/elbeecrypt/common/utils/: container.cpp  fs.cpp  stream.cpp  string.cpp
src/elbeecrypt/cryptor/: hunter-encryptor.cpp  main.cpp
src/elbeecrypt/decryptor/: hunter-decryptor.cpp  main.cpp
